--- a/Learning_log11/learning_logs/templates/learning_logs/index.html
+++ b/Learning_log11/learning_logs/templates/learning_logs/index.html
@@ -2,7 +2,7 @@
 
 {% block header %}
     <div class='jumbotron'>
-        <h1>Hello World!</h1>
+        <h1>Rose521. From handsome 2038Yeah.</h1>
     </div>
 {% endblock header %} 
 
